<resources>
    <string name="app_name">SmartCooking</string>
    <string name="search_btn">Procurar Receitas</string>
    <string name="addIngr_btn">Mais Ingredientes</string>
    <string name="removeIngr_btn">Menos Ingredientes</string>
    <string name="ingr_prompt">Escolha um ingrediente</string>
    <string name="max_ingr">Número máximo de ingredientes atingido !</string>
    <string name="novo_ingr">Novo ingrediente adicionado</string>
    <string name="del_ingr">Ingrediente removido</string>
    <string name="min_ingr">Número mínimo de ingredientes !</string>
    <string name="carne_btn">Carne</string>
    <string name="peixe_btn">Peixe</string>
    <string name="vegan_btn">Vegetariano</string>
    <string name="sobremesa_btn">Sobremesa</string>
    <string name="snacks_btn">Snacks</string>
    <string name="outros_btn">Outros</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="verTodasReceitas">Ver todas as receitas</string>
    <string name="nome_receita_hint">Insira o nome da receita</string>
    <string name="resultados">Resultados da pesquisa:</string>
    <string name="search">Procurar</string>
    <string name="clr_search">Limpar procura</string>
    <string name="tempo_label">Tempo:</string>
    <string name="dif_label">Dificuldade:</string>
    <string name="fornecedor_label">Fornecedor:</string>
    <string name="receitaIngr_label"><u>Ingredientes:</u></string>
    <string name="prep_label"><u>Modo preparação:</u></string>
    <string name="acercaNos_label">Acerca de nós:</string>
    <string name="parceiros_label">Parceiros:</string>
    <string name="outros_label">Outros:</string>
    <string name="icons_label">Icons feitos por:</string>
    <string name="acercaNos_texto">\t\tA equipa que criou a SmartCooking é composta por 6 estudantes de Engenharia Informática da Universidade de Coimbra. Esta equipa no intuito de realizar um projecto para a cadeira de Projectos de Gestão e de Inovação, teve como ideia a realização de uma aplicação que combata as dificuldades na preparação e escolha de refeições com os ingredientes que estão disponíveis na sua dispensa.\n\tSmartCooking irá ajudar todos os estudantes e todas as pessoas sem ideias e com dificuldades na preparação de uma refeição sem dúvida!\n\tBom apetite!\n\nContacto:      smartcookinguc@gmail.com</string>
    <string name="parceiros_texto">Visitem as páginas dos nossos parceiros:</string>
    <string name="fb_label">Facebook:</string>
    <string name="twitter_label">Twitter:</string>
    <string name="site_label">Website:</string>
    <string name="erro_nome_size">O nome a procurar tem de ter pelo menos 3 caracteres</string>
    <string name="erro_nome_foundNone">Não foram encontradas receitas</string>
    <string-array name="menu">
        <item>INGREDIENTES</item>
        <item>PESQUISA</item>
        <item>CATEGORIAS</item>
        <item>TODAS</item>
        <item>ACERCA</item>
    </string-array>
    <string-array name="ingr_array">
        <item>Selecione um ingrediente</item>
        <item>Abóbora</item>
        <item>Açúcar</item>
        <item>Açúcar Mascavado</item>
        <item>Alface</item>
        <item>Alheira</item>
        <item>Alho francês</item>
        <item>Amêijoas</item>
        <item>Amêndoas</item>
        <item>Ananás</item>
        <item>Arroz</item>
        <item>Atum</item>
        <item>Bacalhau</item>
        <item>Bacon</item>
        <item>Batata</item>
        <item>Bifanas</item>
        <item>Bifes de Peru</item>
        <item>Bolachas Maria</item>
        <item>Bróculos</item>
        <item>Cacau</item>
        <item>Café</item>
        <item>Caldo de Galinha</item>
        <item>Camarão inteiro</item>
        <item>Carne</item>
        <item>Carne Picada</item>
        <item>Castanhas</item>
        <item>Cebola</item>
        <item>Cenoura</item>
        <item>Chocolate</item>
        <item>Chocolate em pó</item>
        <item>Chouriço de carne</item>
        <item>Claras de ovos</item>
        <item>Cogumelos</item>
        <item>Costeletas de porco</item>
        <item>Courgette</item>
        <item>Coxas de frango</item>
        <item>Delícias do mar</item>
        <item>Ervilhas</item>
        <item>Esparguete</item>
        <item>Farinha</item>
        <item>Farinha Maizena</item>
        <item>Feijão</item>
        <item>Feijão verde</item>
        <item>Fermento</item>
        <item>Fiambre</item>
        <item>Filetes</item>
        <item>Frango</item>
        <item>Gambas</item>
        <item>Ketchup</item>
        <item>Legumes</item>
        <item>Leite</item>
        <item>Louro</item>
        <item>Maçã</item>
        <item>Manjericão</item>
        <item>Manteiga</item>
        <item>Manteiga de alho</item>
        <item>Margarina</item>
        <item>Massa cotovelinhos</item>
        <item>Massa de pão</item>
        <item>Massa folhada</item>
        <item>Massa macarrão</item>
        <item>Milho</item>
        <item>Miolo de camarão</item>
        <item>Mostarda</item>
        <item>Natas</item>
        <item>Nozes</item>
        <item>Óleo</item>
        <item>Oregãos</item>
        <item>Ovos</item>
        <item>Pão</item>
        <item>Pão ralado</item>
        <item>Passas</item>
        <item>Peixe</item>
        <item>Pepino</item>
        <item>Pimento verde</item>
        <item>Pimento vermelho</item>
        <item>PiriPiri</item>
        <item>Polpa de tomate</item>
        <item>Porco</item>
        <item>Presunto</item>
        <item>Queijo</item>
        <item>Queijo Amanteigado</item>
        <item>Queijo de cabra</item>
        <item>Queijo Fresco</item>
        <item>Queijo Ralado</item>
        <item>Queijo Mozzarella</item>
        <item>Queijo Parmesao</item>
        <item>Rúcula</item>
        <item>Salada</item>
        <item>Salmão</item>
        <item>Salsa</item>
        <item>Salsicha</item>
        <item>Sumo de limão</item>
        <item>Vitela</item>
    </string-array>
    <string-array name="nav_drawer_items">
        <item>Pesquisa por Ingredientes</item>
        <item>Pesquisa por Nome</item>
        <item>Pesquisa por Categorias</item>
        <item>Todas as Receitas</item>
        <item>Acerca</item>
        <item>Exit</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_categorias">Categorias</string>
    <string name="image_list_description">Image of the Receipe</string>
    <string name="title_activity_detalhes">DetalhesActivity</string>
</resources>