<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/acerca_title"
                        android:background="@color/colorPrimary"
                        android:text="@string/acercaNos_label"
                        android:textAlignment="gravity"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/acerca_side_margin"
                        android:layout_marginRight="@dimen/acerca_side_margin"
                        android:layout_marginTop="@dimen/acerca_top_margin"
                        android:gravity="center_vertical"
                        android:text="@string/acercaNos_texto"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/acerca_side_margin"
                        android:gravity="start|top"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/site_label"
                            android:textColor="#000000"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/site_link"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/acerca_side_margin"
                        android:gravity="start|top"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/fb_label"
                            android:textColor="#000000"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/fb_link"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/acerca_side_margin"
                        android:gravity="start|top"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/twitter_label"
                            android:textColor="#000000"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/twitter_link"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/acerca_title"
                        android:layout_marginTop="@dimen/acerca_top_margin"
                        android:background="@color/colorPrimary"
                        android:text="@string/parceiros_label"
                        android:textAlignment="gravity"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/parceiros_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/acerca_side_margin"
                        android:layout_marginRight="@dimen/acerca_side_margin"
                        android:layout_marginTop="@dimen/acerca_top_margin"
                        android:gravity="center_vertical"
                        android:text="@string/parceiros_texto"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/parceiros1_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/acerca_side_margin"
                        android:gravity="center_vertical"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/parceiros2_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/acerca_side_margin"
                        android:gravity="center_vertical"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/parceiros3_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/acerca_side_margin"
                        android:gravity="center_vertical"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/acerca_title"
                        android:layout_marginTop="@dimen/acerca_top_margin"
                        android:background="@color/colorPrimary"
                        android:text="@string/outros_label"
                        android:textAlignment="gravity"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/acerca_side_margin"
                        android:layout_marginRight="@dimen/acerca_side_margin"
                        android:layout_marginTop="@dimen/acerca_top_margin"
                        android:gravity="start|top"
                        android:orientation="horizontal"
                        android:layout_marginBottom="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/icons_label"
                            android:textColor="#000000"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/icons_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    <!-- Side navigation drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#404040"/>
</android.support.v4.widget.DrawerLayout>