<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-2dp"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="-2dp"
        android:orientation="vertical">

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_border"
                android:layout_weight="1">

                <!-- android:layout_centerInParent="true" -->

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/meat"/>

                <Button
                    android:id="@+id/carne_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:gravity="bottom|center"
                    android:textSize="15sp"
                    android:text="@string/carne_btn" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_border"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/fish" />

                <Button
                    android:id="@+id/peixe_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:gravity="bottom|center"
                    android:textSize="15sp"
                    android:text="@string/peixe_btn" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_border"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/vegan" />

                <Button
                    android:id="@+id/vegan_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:gravity="bottom|center"
                    android:textSize="15sp"
                    android:text="@string/vegan_btn" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_border"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/dessert" />

                <Button
                    android:id="@+id/sobremesa_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:gravity="bottom|center"
                    android:textSize="15sp"
                    android:text="@string/sobremesa_btn" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_border"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/snack" />

                <Button
                    android:id="@+id/snack_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:gravity="bottom|center"
                    android:textSize="15sp"
                    android:text="@string/snacks_btn" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_border"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/other" />

                <Button
                    android:id="@+id/outro_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:gravity="bottom|center"
                    android:textSize="15sp"
                    android:text="@string/outros_btn" />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <!-- Side navigation drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#404040" >

    </ListView>

</android.support.v4.widget.DrawerLayout>